--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
   "homepage": "https://github.com/SchmJan/Ticket-API#readme",
   "dependencies": {
     "@types/node": "^16.4.9",
+    "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
+    "morgan": "^1.10.0"
   }
 }
