--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build && node build/index.js",
+    "start": "npm run build &&  cd build/ && node index.js",
     "build": "rm -rf build/ && npx tsc",
     "nodemon": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,12 +24,16 @@
     "@types/node": "^16.4.9",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
+    "swagger-jsdoc": "^6.1.0",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "morgan": "^1.10.0"
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3"
   }
 }
